# serializer version: 1
# name: test_auth_and_cookies_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/cookies/": {
        "get": {
          "operationId": "getAuthedandcookiescontrollerApiCookies",
          "parameters": [
            {
              "description": "Cookies metadata",
              "deprecated": false,
              "name": "session_id",
              "in": "cookie",
              "schema": {
                "type": "string",
                "title": "Session Id"
              },
              "required": true
            },
            {
              "description": "Override",
              "deprecated": false,
              "name": "CSRF",
              "in": "cookie",
              "schema": {
                "type": "string",
                "title": "Csrf",
                "description": "Override"
              },
              "required": true
            },
            {
              "description": "Short summary.\n\nAnd some other description text.",
              "deprecated": false,
              "style": "deepObject",
              "explode": true,
              "name": "tags",
              "in": "query",
              "schema": {
                "items": {
                  "type": "string"
                },
                "type": "array",
                "title": "Tags"
              },
              "required": true
            },
            {
              "description": "Short summary.\n\nAnd some other description text.",
              "deprecated": false,
              "style": "deepObject",
              "explode": true,
              "name": "query",
              "in": "query",
              "schema": {
                "anyOf": [
                  {
                    "type": "string"
                  },
                  {
                    "type": "null"
                  }
                ],
                "title": "Query"
              },
              "required": true
            },
            {
              "description": "Short summary.\n\nAnd some other description text.",
              "deprecated": false,
              "style": "deepObject",
              "explode": true,
              "name": "regular",
              "in": "query",
              "schema": {
                "type": "integer",
                "title": "Regular"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "401": {
              "description": "Raised when auth was not successful",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false,
          "security": [
            {
              "jwt": []
            }
          ]
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {
        "jwt": {
          "type": "http",
          "description": "JWT token auth",
          "scheme": "Bearer",
          "bearerFormat": "JWT"
        }
      }
    }
  }
  '''
# ---
# name: test_conditional_types
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/types/": {
        "post": {
          "operationId": "postConditionaltypescontrollerApiTypes",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/CustomUserModel"
                }
              },
              "application/xml": {
                "schema": {
                  "$ref": "#/components/schemas/_XmlModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "409": {
              "description": "Conflict",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/_XmlResponseModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlModel": {
          "properties": {
            "xml_value": {
              "type": "integer",
              "title": "Xml Value"
            }
          },
          "type": "object",
          "required": [
            "xml_value"
          ],
          "title": "_XmlModel"
        },
        "CustomUserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlResponseModel": {
          "properties": {
            "xml_response": {
              "type": "string",
              "title": "Xml Response"
            }
          },
          "type": "object",
          "required": [
            "xml_response"
          ],
          "title": "_XmlResponseModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_conditional_types_with_example
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/types-with-example/": {
        "post": {
          "operationId": "postConditionaltypeswithexamplecontrollerApiTypesWithExample",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/CustomUserModel"
                },
                "example": "just for test"
              },
              "application/xml": {
                "schema": {
                  "$ref": "#/components/schemas/_XmlModel"
                }
              }
            },
            "required": true
          },
          "responses": {
            "409": {
              "description": "Conflict",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/_XmlResponseModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                },
                "application/xml": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlModel": {
          "properties": {
            "xml_value": {
              "type": "integer",
              "title": "Xml Value"
            }
          },
          "type": "object",
          "required": [
            "xml_value"
          ],
          "title": "_XmlModel"
        },
        "CustomUserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "_XmlResponseModel": {
          "properties": {
            "xml_response": {
              "type": "string",
              "title": "Xml Response"
            }
          },
          "type": "object",
          "required": [
            "xml_response"
          ],
          "title": "_XmlResponseModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_raw_path_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user/{user_id}/post/{post_id}/": {
        "get": {
          "operationId": "getGetpostcontrollerApiV1UserUserIdPostPostId",
          "parameters": [
            {
              "deprecated": false,
              "name": "user_id",
              "in": "path",
              "schema": {
                "type": "integer",
                "title": "User Id"
              },
              "required": true
            },
            {
              "deprecated": false,
              "name": "post_id",
              "in": "path",
              "schema": {
                "type": "string",
                "format": "uuid",
                "title": "Post Id"
              },
              "required": true
            }
          ],
          "responses": {
            "404": {
              "description": "Not Found",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      },
      "/api/v1/articles/{year}/{slug}/": {
        "get": {
          "operationId": "getGetpostcontrollerApiV1ArticlesYearSlug",
          "parameters": [
            {
              "deprecated": false,
              "name": "year",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Year"
              },
              "required": true
            },
            {
              "deprecated": false,
              "name": "slug",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Slug"
              },
              "required": true
            }
          ],
          "responses": {
            "404": {
              "description": "Not Found",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "string"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_user_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user/": {
        "get": {
          "operationId": "getComposedUserblueprintGetuserlistblueprintApiV1User",
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "$ref": "#/components/schemas/_UserModel"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        },
        "post": {
          "operationId": "postComposedUserblueprintGetuserlistblueprintApiV1User",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": {
                    "type": "integer"
                  },
                  "type": "object"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      },
      "/api/v1/user/{id}/": {
        "get": {
          "operationId": "getGetusercontrollerApiV1UserId",
          "parameters": [
            {
              "deprecated": false,
              "name": "id",
              "in": "path",
              "schema": {
                "type": "integer",
                "title": "Id"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/CustomUserModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "404": {
              "description": "Raised when path parameters do not match",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "CustomUserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "exclusiveMinimum": 0,
              "title": "Age"
            },
            "username": {
              "type": "string",
              "title": "Username",
              "deprecated": true
            },
            "email": {
              "type": "string",
              "title": "Email"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "CustomUserModel"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
